<resources>
    <string name="app_name">SWETS</string>

    // On Boarding
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboard_title">Sweets Ordering App</string>
    <string name="onboarding_description">Order your favorite desert \n Here!</string>
    <string name="onboarding_get_started_txt">Get Started</string>

    // MainScreen
    <string name="informationTv">Flavoured cupcakes with \n special icing</string>
    <string name="main_screen_tab_all_text">All</string>
    <string name="main_screen_tab_sweets_text">Sweets</string>
    <string name="main_screen_tab_cakes_text">Cakes</string>
    <string name="main_screen_tab_candey_text">Candey</string>
    <string name="cup_cake_txt">Cup Cake</string>
    <string name="price_of_cup_cake">$5</string>
    <string name="dollars_txt">5$</string>
    <string name="favourites_feedback_txt">2.2k</string>
    <string name="add_to_cart_btn">Add to basket</string>
    <string name="minus_txt_cv">-</string>
    <string name="home_main_menu">Home</string>
    <string name="messageTv">Message</string>
    <string name="basketTv">Basket</string>
    <string name="settingsTv">Settings</string>
    <string name="deleteTv_tv">delete</string>
    <string name="information_foods">Information</string>
    <string name="about_this_product_tv">About this product</string>
    <string name="flavoured_tv_fds">Flavoured cupcakes with special icing, Flavoured cupcakes.</string>

</resources>