<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.details_screen.FoodDetailsScreenFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/backCv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="18dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:src="@drawable/keyboard_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivFood"
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:layout_marginHorizontal="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backCv" />

    <TextView
        android:id="@+id/tvFoodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivFood"
        tools:text="Donuts" />

    <TextView
        android:id="@+id/tvFoodDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="@color/flavoured_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodTitle"
        tools:text="Flavoured cupcakes with special icing" />


    <ImageView
        android:id="@+id/feed_back_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_1"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintEnd_toStartOf="@+id/feed_back_first"
        app:layout_constraintTop_toBottomOf="@+id/flavoured_cup_cakes_text_view" />

    <ImageView
        android:id="@+id/feed_back_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_1"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintStart_toEndOf="@+id/feed_back_first"
        app:layout_constraintTop_toBottomOf="@+id/flavoured_cup_cakes_text_view" />

    <ImageView
        android:id="@+id/feed_back_fourth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_1"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintEnd_toStartOf="@+id/feed_back_third"
        app:layout_constraintTop_toBottomOf="@+id/flavoured_cup_cakes_text_view" />

    <ImageView
        android:id="@+id/feed_back_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_5"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintStart_toEndOf="@+id/feed_back_third"
        app:layout_constraintTop_toBottomOf="@+id/flavoured_cup_cakes_text_view" />


    <ImageView
        android:id="@+id/feed_back_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_1"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flavoured_cup_cakes_text_view" />

    <ImageView
        android:id="@+id/feed_back_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_5"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintStart_toEndOf="@+id/feed_back_second"
        app:layout_constraintTop_toBottomOf="@+id/flavoured_cup_cakes_text_view" />


    <TextView
        android:id="@+id/favourites_feedback_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/favourites_feedback_txt"
        android:textColor="@color/flavoured_color"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintStart_toEndOf="@+id/feed_back_gray"
        app:layout_constraintTop_toBottomOf="@+id/flavoured_cup_cakes_text_view" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/onboarding_background"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/add_to_cart_btn"
        android:textSize="22sp"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_about_this_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvFoodPrice"
        tools:text="About this product" />

    <TextView
        android:id="@+id/flavoured_cup_cakes_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:textColor="@color/flavoured_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txt_about_this_product"
        app:layout_constraintStart_toStartOf="@+id/txt_about_this_product"
        app:layout_constraintTop_toBottomOf="@+id/txt_about_this_product"
        tools:text="Flavoured cupcakes with special icing, Flavoured cupcakes." />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:src="@drawable/vector__6_"
        app:layout_constraintBottom_toTopOf="@+id/flavoured_cup_cakes_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed_back_fourth" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvFoodPrice"
        android:layout_width="72dp"
        android:layout_height="45dp"
        android:layout_margin="12dp"
        app:cardBackgroundColor="@color/onboarding_btn_background"
        app:cardCornerRadius="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodDescription">

        <TextView
            android:id="@+id/tvFoodPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dollars_txt"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>